# dircs

./: .markdownlint.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
src/: args.rs  hashers.rs  main.rs  memmap.rs  progress.rs
src/hash_functions/: mod.rs
tests/: basic.rs
