[package]
name = "dircs"
version = "0.1.9"
authors = ["Clement Tsang <cjhtsang@uwaterloo.ca>"]
edition = "2021"
repository = "https://github.com/ClementTsang/dircs"
keywords = ["cross-platform", "cli", "hash", "checksum"]
license = "Apache-2.0"
categories = ["command-line-utilities"]
description = "A small cross-platform utility to get the hash of a file or directory."
readme = "README.md"
rust-version = "1.70.0"
exclude = [".github", ".markdownlint.json", "CHANGELOG.md"]

[[bin]]
name = "dircs"
path = "src/main.rs"
doc = false

[profile.dev.package."*"]
opt-level = 3 # Compile dependencies with optimizations on even in debug mode.

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[features]
blake2 = ["dep:blake2"]
# blake3 = ["dep:blake3"]
md5 = ["dep:md5"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
default = ["blake2", "md5", "sha1", "sha2", "sha3"]

[dependencies]
anyhow = "1.0.86"
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.5.4", features = ["rayon"] }
clap = { version = "4.5.16", features = ["derive"] }
hex = "0.4.3"
jwalk = "0.8.1"
md5 = { version = "0.7.0", optional = true }
memmap2 = "0.9.4"
rayon = "1.10.0"
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"
